# word_of_day

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
api/: dependencies.py  routes.py
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  logger.py
app/domain/: entities.py  interfaces.py
app/infrastructure/: ai_service.py  cache_service.py  rss_service.py
app/use_cases/: article_generator.py
core/: config.py  exceptions.py  logger.py
domain/: interfaces.py
infrastructure/: ai_service.py  cache_service.py  rss_service.py
schemas/: article_schema.py
tests/: conftest.py
tests/integration/: test_api.py  test_use_case.py
tests/unit/: test_ai_service.py  test_cache_service.py  test_rss_service.py
use_cases/: article_generator.py
